Fix cast-align warning in StringImpl.h https://bugs.webkit.org/show_bug.cgi?id=139222

Reviewed by Anders Carlsson.

* wtf/text/StringImpl.h:
(WTF::StringImpl::tailPointer):


Canonical link: https://commits.webkit.org/157117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176805 268f45cc-cd09-0410-ab3c-d52691b4dbfc